--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mediterraneo</title>
-    <link rel="icon" type="image/x-icon" href="/Ejercicios/mediterraneo/images/favicon.ico"  > 
+    <link rel="icon" type="image/x-icon" href="/Ejercicios/mediterraneo/img/favicon.ico"  > 
     <style>
         body {
             background-color: #218db1;
@@ -20,10 +20,11 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: azure;
         }
         a:link {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: aliceblue; color: #218db1;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #218db1;
         }
         a:visited {
             color: #218db1;
+            text-decoration: none;
         }
         a:hover {
             color: red;
